--- a/Code/Modeling/modeling.ipynb
+++ b/Code/Modeling/modeling.ipynb
@@ -290,10 +290,10 @@
        "  <th>Method:</th>              <td>Least Squares</td>    <th>  F-statistic:       </th> <td>   122.5</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>              <td>Thu, 28 Dec 2023</td>   <th>  Prob (F-statistic):</th> <td>1.62e-130</td>\n",
+       "  <th>Date:</th>              <td>Fri, 05 Jan 2024</td>   <th>  Prob (F-statistic):</th> <td>1.62e-130</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                  <td>18:52:20</td>       <th>  Log-Likelihood:    </th> <td> -4047.5</td> \n",
+       "  <th>Time:</th>                  <td>23:26:59</td>       <th>  Log-Likelihood:    </th> <td> -4047.5</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>       <td>  1030</td>        <th>  AIC:               </th> <td>   8111.</td> \n",
@@ -360,8 +360,8 @@
        "Dep. Variable:     CompressiveStrength   R-squared:                       0.456\n",
        "Model:                             OLS   Adj. R-squared:                  0.452\n",
        "Method:                  Least Squares   F-statistic:                     122.5\n",
-       "Date:                 Thu, 28 Dec 2023   Prob (F-statistic):          1.62e-130\n",
-       "Time:                         18:52:20   Log-Likelihood:                -4047.5\n",
+       "Date:                 Fri, 05 Jan 2024   Prob (F-statistic):          1.62e-130\n",
+       "Time:                         23:26:59   Log-Likelihood:                -4047.5\n",
        "No. Observations:                 1030   AIC:                             8111.\n",
        "Df Residuals:                     1022   BIC:                             8150.\n",
        "Df Model:                            7                                         \n",
@@ -550,14 +550,14 @@
      "text": [
       "Feature importances: \n",
       "                        Imp\n",
-      "Cement            0.308616\n",
-      "BlastFurnaceSlag  0.059058\n",
-      "FlyAsh            0.008240\n",
-      "Water             0.122817\n",
-      "Superplasticizer  0.052607\n",
-      "CoarseAggregate   0.025965\n",
-      "FineAggregate     0.049864\n",
-      "Age               0.372833\n"
+      "Cement            0.307384\n",
+      "BlastFurnaceSlag  0.058326\n",
+      "FlyAsh            0.007390\n",
+      "Water             0.124586\n",
+      "Superplasticizer  0.050728\n",
+      "CoarseAggregate   0.028994\n",
+      "FineAggregate     0.049545\n",
+      "Age               0.373047\n"
      ]
     }
    ],
@@ -621,7 +621,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.2159331760409755, 0.4646861048503339, 0.7703077119190066, None, None)"
+       "(0.21895903428247285, 0.4679305870345225, 0.7670890480914233, None, None)"
       ]
      },
      "execution_count": 10,
@@ -640,7 +640,7 @@
    "metadata": {},
    "source": [
     "The error rate for test data set is as shown above.\n",
-    "- The R2 score explains around 78.71% of variance in the data with rmse of 0.4430 \n",
+    "- The R2 score explains around 76.71% of variance in the data with rmse of 0.4679\n",
     "- The model might be overfitting  which can be checked by comparing the values of train data with the test data."
    ]
   },
@@ -661,7 +661,7 @@
      "output_type": "stream",
      "text": [
       "R2 score on Training data using Decision tree: 0.9938748100766917\n",
-      "R2 Score on Test data using Decision Tree: 0.7703077119190066\n"
+      "R2 Score on Test data using Decision Tree: 0.7670890480914233\n"
      ]
     }
    ],
@@ -735,7 +735,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.2050143263827501, 0.45278507747357366, 0.7819223030957428, None, None)"
+       "(0.18597883680416302, 0.43125263686633036, 0.8021707208526229, None, None)"
       ]
      },
      "execution_count": 14,
@@ -758,11 +758,11 @@
      "text": [
       "Feature importances: \n",
       "                        Imp\n",
-      "Cement            0.348969\n",
-      "BlastFurnaceSlag  0.073836\n",
-      "Water             0.139069\n",
-      "Superplasticizer  0.061187\n",
-      "Age               0.376937\n"
+      "Cement            0.348895\n",
+      "BlastFurnaceSlag  0.074253\n",
+      "Water             0.139896\n",
+      "Superplasticizer  0.060031\n",
+      "Age               0.376925\n"
      ]
     }
    ],
@@ -780,7 +780,7 @@
      "output_type": "stream",
      "text": [
       "R2 score on Training data using Decision tree: 0.9919795459520203\n",
-      "R2 Score on Test data using Decision Tree: 0.7819223030957428\n"
+      "R2 Score on Test data using Decision Tree: 0.8021707208526229\n"
      ]
     }
    ],
@@ -807,8 +807,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average accuracy:  0.8629040522812886\n",
-      "Standard Deviation:  0.04360048506724582\n"
+      "Average accuracy:  0.8595643623700175\n",
+      "Standard Deviation:  0.05088474041276052\n"
      ]
     }
    ],
@@ -890,7 +890,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.11852955988256907, 0.3442812220882357, 0.8739178188649708, None, None)"
+       "(0.11989525894440102, 0.346258947818538, 0.8724650984072181, None, None)"
       ]
      },
      "execution_count": 20,
@@ -912,8 +912,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score on Training data using Random Forest: 0.9804415598895991\n",
-      "R2 Score on Test data using Random Forest: 0.8739178188649708\n"
+      "R2 score on Training data using Random Forest: 0.9791425887993372\n",
+      "R2 Score on Test data using Random Forest: 0.8724650984072181\n"
      ]
     }
    ],
@@ -947,8 +947,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average accuracy:  0.9066385097169971\n",
-      "Standard Deviation:  0.03439407770340155\n"
+      "Average accuracy:  0.9081152094891264\n",
+      "Standard Deviation:  0.03487110475454663\n"
      ]
     }
    ],
@@ -966,7 +966,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The accuracy of k-folds random forest for the feature selected increased from 87.90 to 90.695."
+    "The accuracy of k-folds random forest for the feature selected increased from 87.90 to 90.8115."
    ]
   },
   {
@@ -1030,7 +1030,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.11818224911195449, 0.3437764522359763, 0.8742872600367271, None, None)"
+       "(0.1180399936364146, 0.34356948880308713, 0.8744385799323906, None, None)"
       ]
      },
      "execution_count": 25,
@@ -1053,7 +1053,7 @@
      "output_type": "stream",
      "text": [
       "R2 score on Training data using Random Forest: 0.9367871391362556\n",
-      "R2 Score on Test data using Random Forest: 0.8742872600367271\n"
+      "R2 Score on Test data using Random Forest: 0.8744385799323906\n"
      ]
     }
    ],
@@ -1080,8 +1080,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average accuracy:  0.8922119825965596\n",
-      "Standard Deviation:  0.02832003114767999\n"
+      "Average accuracy:  0.8920926280538171\n",
+      "Standard Deviation:  0.028416655686519545\n"
      ]
     }
    ],
@@ -1528,10 +1528,145 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Train Accuracy</th>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>P-Value</th>\n",
+       "      <th>T-Test</th>\n",
+       "      <th>CV Accuracy Mean</th>\n",
+       "      <th>CV Accuracy StdDev</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>0.991980</td>\n",
+       "      <td>0.802171</td>\n",
+       "      <td>0.185979</td>\n",
+       "      <td>0.431253</td>\n",
+       "      <td>0.802171</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.859564</td>\n",
+       "      <td>0.050885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>0.979143</td>\n",
+       "      <td>0.872465</td>\n",
+       "      <td>0.119895</td>\n",
+       "      <td>0.346259</td>\n",
+       "      <td>0.872465</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.908115</td>\n",
+       "      <td>0.034871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Gradient Boosting</td>\n",
+       "      <td>0.936787</td>\n",
+       "      <td>0.874439</td>\n",
+       "      <td>0.118040</td>\n",
+       "      <td>0.343569</td>\n",
+       "      <td>0.874439</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.892093</td>\n",
+       "      <td>0.028417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MLP Regressor</td>\n",
+       "      <td>0.985453</td>\n",
+       "      <td>0.882734</td>\n",
+       "      <td>0.110241</td>\n",
+       "      <td>0.332026</td>\n",
+       "      <td>0.882734</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Model  Train Accuracy  Test Accuracy       MSE      RMSE  \\\n",
+       "0      Decision Tree        0.991980       0.802171  0.185979  0.431253   \n",
+       "1      Random Forest        0.979143       0.872465  0.119895  0.346259   \n",
+       "2  Gradient Boosting        0.936787       0.874439  0.118040  0.343569   \n",
+       "3      MLP Regressor        0.985453       0.882734  0.110241  0.332026   \n",
+       "\n",
+       "         R2 P-Value T-Test  CV Accuracy Mean  CV Accuracy StdDev  \n",
+       "0  0.802171    None   None          0.859564            0.050885  \n",
+       "1  0.872465    None   None          0.908115            0.034871  \n",
+       "2  0.874439    None   None          0.892093            0.028417  \n",
+       "3  0.882734    None   None               NaN                 NaN  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'Model': ['Decision Tree', 'Random Forest', 'Gradient Boosting', 'MLP Regressor'],\n",
+    "    'Train Accuracy': [r2_train_dt_final, r2_train_rf, r2_train_gbr, r2_train_mlp],\n",
+    "    'Test Accuracy': [r2_test_dt_final, r2_test_rf, r2_test_gbr, r2_test_mlp],\n",
+    "    'MSE': [metrics_dt_final[0], metrics_rf[0], metrics_gbr[0], metrics_mlp[0]],\n",
+    "    'RMSE': [metrics_dt_final[1], metrics_rf[1], metrics_gbr[1], metrics_mlp[1]],\n",
+    "    'R2': [metrics_dt_final[2], metrics_rf[2], metrics_gbr[2], metrics_mlp[2]],\n",
+    "    'P-Value': [metrics_dt_final[3], metrics_rf[3], metrics_gbr[3], metrics_mlp[3]],\n",
+    "    'T-Test': [metrics_dt_final[4], metrics_rf[4], metrics_gbr[4], metrics_mlp[4]],\n",
+    "    'CV Accuracy Mean': [accuracy, accuracy_rf, accuracy3, np.nan],\n",
+    "    'CV Accuracy StdDev': [results1.std(), results2.std(), results3.std(),np.nan]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Display DataFrame\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the above models, the random forest regressor, random forest with k folds, Gradient Boosting regressor, Gradient Boosting regressor with k folds seems to performing well. Lets perform hyperparamter tuning for both these models."
+    "Based on the above models, the random forest regressor, random forest with k folds, Gradient Boosting regressor, Gradient Boosting regressor with k folds seems to performing well. Lets perform hyperparamter tuning for random forest \n",
+    " models."
    ]
   },
   {
@@ -1740,7 +1875,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Therefore the confidence interval of th random forest regressor is around 84.5% to 90.9% , this can be used as our primary model. "
+    "Therefore the confidence interval of th random forest regressor is around 84.5% to 90.5% , this can be used as our primary model. "
    ]
   }
  ],
